--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,13 +1,13 @@
 name: Pull request to Develop
 
 on:
-  pull-request:
+  push:
     branches:
       - develop
-    types:
-      - opened
-      - synchronize
-      - reopened
+    # types:
+    #   - opened
+    #   - synchronize
+    #   - reopened
 
 jobs:
   check-code:
