fix pipeline attempt

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,8 +10,8 @@ on:
     #   - reopened
 
 jobs:
-  check-code:
-    - name: Check code quality and coverage
+  check_code:
+    name: Check code quality and coverage
     runs-on: ubuntu-latest
     steps:
       - name: Python linter
