update pipeline attempt

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,7 +10,7 @@ on:
       - reopened
 
 jobs:
-  checkcode:
+  build:
     - name: Check code quality and coverage
     runs-on: ubuntu-latest
     steps:
